added some new components at the description file

--- a/description.ipynb
+++ b/description.ipynb
@@ -50,6 +50,48 @@
     "LangSmith does NOT run the model.\n",
     "It only tracks and evaluates what LangChain executes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7887102f",
+   "metadata": {},
+   "source": [
+    "🚀 Built a Local LLM Chatbot with Ollama (Gemma 3) + LangSmith Tracking\n",
+    "\n",
+    "I just finished building a Streamlit-based chatbot powered by a locally running LLM using Ollama (Gemma 3) — no cloud inference, fully local ⚡\n",
+    "\n",
+    "In this project, I focused on keeping things simple, practical, and developer-friendly, while also exploring LLM observability with LangSmith.\n",
+    "\n",
+    "🎯 What this project demonstrates:\n",
+    "\n",
+    "Running Gemma 3 locally using Ollama\n",
+    "\n",
+    "Building an interactive chatbot UI with Streamlit\n",
+    "\n",
+    "Integrating LangChain-compatible LLM interfaces\n",
+    "\n",
+    "Using LangSmith for tracing and experiment tracking (optional but powerful)\n",
+    "\n",
+    "Clean environment management using python-dotenv\n",
+    "\n",
+    "📽️ I’ve shared a short working demo video explaining the architecture, flow, and how everything connects end-to-end.\n",
+    "\n",
+    "💡 Why this matters:\n",
+    "Local LLMs are becoming increasingly important for privacy, cost control, and rapid experimentation. This project is a minimal blueprint for anyone looking to get started with local AI apps + observability.\n",
+    "\n",
+    "🔗 GitHub Repository:\n",
+    "https://github.com/ash-iiiiish/Simple-Chatbot-with-Ollama-and-Tracking-using-Langsmith\n",
+    "\n",
+    "I’d love feedback from the community — and happy to connect with folks working on LLMs, GenAI, ML engineering, or backend systems.\n",
+    "\n",
+    "#GenerativeAI #LLM #Ollama #Gemma #LangChain #LangSmith #Streamlit #LocalLLM #AIProjects #MachineLearning #OpenSource #SoftwareEngineering #MLOps #AIEngineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "679be0fe",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
